trabalhando na pagina de login

--- a/logins/login01/index.html
+++ b/logins/login01/index.html
@@ -11,13 +11,23 @@
     <header>
         
         <div id="login">
-            <input type="email"placeholder="Email" name="email" id="emaillogin">
-            <input type="password"placeholder="Senha" name="password" id="passwordlogin">
+           Email: <input type="email"placeholder="Email" name="email" id="emaillogin">
+           Senha: <input type="password"placeholder="Senha" name="password" id="passwordlogin">
             <input type="button" value="Entrar">
         </div>
 
     </header>
     <main>
+       <div id="box">
+           Nome: <input type="text" name="nomeid" id="nomeuser">
+           Último Nome: <input type="text" name="lastname" id="lastnameuser">
+           <br>
+           Data de nascimento: <input type="date" name="datanascimento" id="datanascimento">
+
+           <input type="button" value="Se cadastrar">
+
+
+       </div>
 
     </main>
     <footer>
