trabalhando na pagina de login

--- a/logins/login01/index.html
+++ b/logins/login01/index.html
@@ -18,11 +18,22 @@
 
     </header>
     <main>
-       <div id="box">
+       <div id="cadastro">
+           <h1>Se cadastrar</h1>
            Nome: <input type="text" name="nomeid" id="nomeuser">
+           <br>
            Último Nome: <input type="text" name="lastname" id="lastnameuser">
            <br>
+        
            Data de nascimento: <input type="date" name="datanascimento" id="datanascimento">
+           <br>
+           Email: <input type="email" name="novoemail" id="novoemail">
+           <br>
+           Senha: <input type="password" name="nsenha" id="nsenha">
+           <br>
+           Sua senha novamente: <input type="password" name="confirmacaodesenha" id="confirmacaodesenha">
+           <br>
+
 
            <input type="button" value="Se cadastrar">
 
@@ -31,7 +42,7 @@
 
     </main>
     <footer>
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quo voluptatum iste labore ex dicta, veritatis soluta molestiae, maiores, mollitia cumque ipsa sint dolores repudiandae neque vitae doloremque. Aperiam, fugiat?</p>
     </footer>
 </body>
 </html>
