--- a/logins/login01/index.html
+++ b/logins/login01/index.html
@@ -20,18 +20,20 @@
     <main>
        <div id="cadastro">
            <h1>Se cadastrar</h1>
-           Nome: <input type="text" name="nomeid" id="nomeuser">
-           <br>
-           Último Nome: <input type="text" name="lastname" id="lastnameuser">
+           <input type="text" name="nomeid" id="nomeuser"placeholder="Nome">
+           
+           <input type="text" name="lastname" id="lastnameuser"placeholder="Último nome">
            <br>
         
-           Data de nascimento: <input type="date" name="datanascimento" id="datanascimento">
+           Data de nascimento:
            <br>
-           Email: <input type="email" name="novoemail" id="novoemail">
+            <input type="date" name="datanascimento" id="datanascimento" >
            <br>
-           Senha: <input type="password" name="nsenha" id="nsenha">
+           <input type="email" name="novoemail" id="novoemail"placeholder="Email">
            <br>
-           Sua senha novamente: <input type="password" name="confirmacaodesenha" id="confirmacaodesenha">
+           <input type="password" name="nsenha" id="nsenha"placeholder="Senha">
+           <br>
+           <input type="password" name="confirmacaodesenha" id="confirmacaodesenha"placeholder="Sua senha novamente">
            <br>
 
 
@@ -42,7 +44,7 @@
 
     </main>
     <footer>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quo voluptatum iste labore ex dicta, veritatis soluta molestiae, maiores, mollitia cumque ipsa sint dolores repudiandae neque vitae doloremque. Aperiam, fugiat?</p>
+MA Denvelopement
     </footer>
 </body>
 </html>
