--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -22,7 +22,7 @@
 
 
         <div id="numeros">
-            <input class="num"type="button" value="7">
+            <input class="num"type="button" value="7"onclick=inserir(7)>
             <input class="num"type="button" value="8">
             <input class="num"type="button" value="9">
             <input class="num"type="button" value="4">
@@ -46,6 +46,7 @@
             
         </div>
     </div>
+    <script src="js.js"></script>
     
 </body>
 </html>
