--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -22,27 +22,27 @@
 
 
         <div id="numeros">
-            <input class="num"type="button" value="7"onclick=inserir(7)>
-            <input class="num"type="button" value="8"onclick=inserir(8)>
-            <input class="num"type="button" value="9"onclick=inserir(9)>
-            <input class="num"type="button" value="4"onclick=inserir(4)>
-            <input class="num"type="button" value="5"onclick=inserir(5)>
-            <input class="num"type="button" value="6"onclick=inserir(6)>
-            <input class="num"type="button" value="1"onclick=inserir(1)>
-            <input class="num"type="button" value="2"onclick=inserir(2)>
-            <input class="num"type="button" value="3"onclick=inserir(3)>
-            <input class="num"type="button" value="0"onclick=inserir(0)>
-            <input class="num"type="button" value=".">
+            <input class="num"type="button" value="7"onclick="inserir('7')">
+            <input class="num"type="button" value="8"onclick="inserir('8')">
+            <input class="num"type="button" value="9"onclick="inserir('9')">
+            <input class="num"type="button" value="4"onclick="inserir('4')">
+            <input class="num"type="button" value="5"onclick="inserir('5')">
+            <input class="num"type="button" value="6"onclick="inserir('6')">
+            <input class="num"type="button" value="1"onclick="inserir('1')">
+            <input class="num"type="button" value="2"onclick="inserir('2')">
+            <input class="num"type="button" value="3"onclick="inserir('3')">
+            <input class="num"type="button" value="0"onclick="inserir('0')">
+            <input class="num"type="button" value="."onclick="inserir('.')">
             <input class="num"type="button" value="=">
         </div>
 
         <div id="outros">
             <input class="out2"type="button" value="AC"onclick=resetar()>
             <input class="out2"type="button" value="<--">
-            <input class="out"type="button" value="/">
-            <input class="out"type="button" value="X">
-            <input class="out"type="button" value="-">
-            <input class="out"type="button" value="+">
+            <input class="out"type="button" value="/"onclick="inserir('/')">
+            <input class="out"type="button" value="X"onclick="inserir('*')">
+            <input class="out"type="button" value="-"onclick="inserir('-')">
+            <input class="out"type="button" value="+"onclick="inserir('+')">
             
         </div>
     </div>
