--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -38,7 +38,7 @@
 
         <div id="outros">
             <input class="out2"type="button" value="AC"onclick=resetar()>
-            <input class="out2"type="button" value="<--">
+            <input class="out2"type="button" value="<--"onclick=apagar()>
             <input class="out"type="button" value="/"onclick="inserir('/')">
             <input class="out"type="button" value="X"onclick="inserir('*')">
             <input class="out"type="button" value="-"onclick="inserir('-')">
