--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -33,7 +33,7 @@
             <input class="num"type="button" value="3"onclick="inserir('3')">
             <input class="num"type="button" value="0"onclick="inserir('0')">
             <input class="num"type="button" value="."onclick="inserir('.')">
-            <input class="num"type="button" value="=">
+            <input class="num"type="button" value="="onclick=calcular()>
         </div>
 
         <div id="outros">
