--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -46,6 +46,9 @@
             
         </div>
     </div>
+    <footer>
+        <p>Criado por Mario Aguiar</p>
+    </footer>
     <script src="js.js"></script>
     
 </body>
