--- a/meusetup/index.html
+++ b/meusetup/index.html
@@ -26,6 +26,9 @@
             <div><img src="imagens/ram.jpg" alt=""></div>
             <h3>Crucial Ballistix </h3>
             <div><img src="imagens/ram2.jpg" alt=""></div>
+        <h2>Gabinete</h2>
+            <h3>K-mex Gamer Black Hawk</h3>
+            <div><img src="imagens/gabinete.jpg" alt=""></div>
         
         <h2>Fans</h2>
             <h3>Kit Cooler FAN Rise Mode Tornado</h3>
