add media query

--- a/logins/login01/index.html
+++ b/logins/login01/index.html
@@ -11,9 +11,9 @@
     <header>
         
         <div id="login">
-           Email: <input type="email"placeholder="Email" name="email" id="emaillogin">
-           Senha: <input type="password"placeholder="Senha" name="password" id="passwordlogin">
-            <input type="button" value="Entrar">
+           <div>Email: <input type="email"placeholder="Email" name="email" id="emaillogin"></div>
+           <div>Senha: <input type="password"placeholder="Senha" name="password" id="passwordlogin"></div>
+            <div><input type="button" value="Entrar"></div>
         </div>
 
     </header>
