add new article

--- a/csgo/index.html
+++ b/csgo/index.html
@@ -63,6 +63,27 @@
             <p>Os acabamentos premiados foram produzidos por 23 artistas diferentes, dos quais 14 se estão a estrear no Workshop. Estamos atualmente no processo de contactar os vencedores e iremos colaborar com eles ao longo das próximas semanas para prepararmos a implementação destes itens no jogo.</p>
 
             <p>Queremos agradecer a todos os que despenderam tempo para participar e esperamos voltar a ver mais criações da comunidade no futuro.</p>
+            <p>21.11.2021</p>
+        </article>
+        <article>
+            <h3>Adesivos vindos diretamente de 2042</h3>
+            <div><img src="imagens/bf_2042_capsule.jpg" alt=""></div>
+            <p>Lançamos hoje a Cápsula de Adesivos de Battlefield 2042, contendo 12 adesivos diferentes do mais novo jogo de tiro da EA, que será lançado no dia 19 de novembro no Steam!</p>
+
+            <p>Então vista o seu Wingsuit e prepare-se para a batalha — os adesivos já estão disponíveis no jogo!</p>
+            <p>17.11.2021</p>
+        </article>
+        <article>
+            <h3>Campeões do Estocolmo 2021 da PGL!</h3>
+            <div><img src="imagens/2021_stockholm_champions.png" alt=""></div>
+            <p>Após quase dois anos, o CS:GO finalmente tem uma nova Campeã Mundial. Diante de uma arena em polvorosa na cidade de Estocolmo e quebrando recordes de telespectadores, a NAVI venceu a Grande Final contra a G2 em uma dramática sequência de duas partidas chegando na prorrogação — fechando a série por 2 a 0.</p>
+
+            <p>Hoje, estamos lançando as cápsulas de autógrafos de jogadores para comemorar os campeões e outros finalistas do Mundial Estocolmo 2021 da PGL. Você encontrará os autógrafos de s1mple, electronic, Boombl4, b1t e Perfecto na Cápsula de Autógrafos dos Campeões, com versões em papel, holográfico e dourado.</p>
+            <div ><img class='img2' src="imagens/crate_sticker_pack_stockh2021_group_champions_large.png" alt=""></div>
+            <p>Os demais finalistas podem ser encontrados na Cápsula de Autógrafos do Finalistas, também com versões em papel, holográfico e dourado.</p>
+            <div ><img class='img2' src="imagens/crate_sticker_pack_stockh2021_group_finalists_large.png" alt=""></div>
+            <p>Você já pode mostrar o seu apoio a essas lendas do CS:GO. 50% da receita será destinada aos jogadores e organizações participantes do Mundial.</p>
+            <p>09.11.2021</p>
         </article>
 
     </main>
