--- a/csgo/index.html
+++ b/csgo/index.html
@@ -25,10 +25,12 @@
         </nav>
     </header>
     <main>
+       
+
         <h2>blog</h2>
         <article>
             <h3>Os vencedores do concurso Dreams & Nightmares</h3>
-           <div><img src="imagens/dreams_blog.jpg" alt=""></div>
+           <div class="cont"><img src="imagens/dreams_blog.jpg" alt=""></div>
 
              <p>No passado mês de julho, anunciámos o “Dreams & Nightmares”, um concurso do Workshop com 1 milhão de dólares em prémios onde cada um dos 10 melhores acabamentos de armas do CS:GO com o tema “sonho/pesadelo” seria premiado com 100 000 $.</p>
 
@@ -67,7 +69,7 @@
         </article>
         <article>
             <h3>Adesivos vindos diretamente de 2042</h3>
-            <div><img src="imagens/bf_2042_capsule.jpg" alt=""></div>
+            <div class="cont"><img src="imagens/bf_2042_capsule.jpg" alt=""></div>
             <p>Lançamos hoje a Cápsula de Adesivos de Battlefield 2042, contendo 12 adesivos diferentes do mais novo jogo de tiro da EA, que será lançado no dia 19 de novembro no Steam!</p>
 
             <p>Então vista o seu Wingsuit e prepare-se para a batalha — os adesivos já estão disponíveis no jogo!</p>
@@ -75,7 +77,7 @@
         </article>
         <article>
             <h3>Campeões do Estocolmo 2021 da PGL!</h3>
-            <div><img src="imagens/2021_stockholm_champions.png" alt=""></div>
+            <div class="cont"><img src="imagens/2021_stockholm_champions.png" alt=""></div>
             <p>Após quase dois anos, o CS:GO finalmente tem uma nova Campeã Mundial. Diante de uma arena em polvorosa na cidade de Estocolmo e quebrando recordes de telespectadores, a NAVI venceu a Grande Final contra a G2 em uma dramática sequência de duas partidas chegando na prorrogação — fechando a série por 2 a 0.</p>
 
             <p>Hoje, estamos lançando as cápsulas de autógrafos de jogadores para comemorar os campeões e outros finalistas do Mundial Estocolmo 2021 da PGL. Você encontrará os autógrafos de s1mple, electronic, Boombl4, b1t e Perfecto na Cápsula de Autógrafos dos Campeões, com versões em papel, holográfico e dourado.</p>
