--- a/csgopre/index.html
+++ b/csgopre/index.html
@@ -96,6 +96,17 @@
                 <a href="#"><img src="imagens/update_dust2.jpg" alt=""></a>
                 <a href="#"><img src="imagens/update_hydra.jpg" alt=""></a>
                 <a href="#"><img src="imagens/update_inferno.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_wildfire.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_nuke.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_bloodhound_new.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_vanguard.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_train.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_breakout.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_phoenix.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_2maps.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_bravo.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_arms_deal.jpg" alt=""></a>
+                <a href="#"><img src="imagens/update_payback.jpg" alt=""></a>
                 
          
         </section>
