--- a/FarCry4/historia.html
+++ b/FarCry4/historia.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>História</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="changecolor('#FACB0B')">
     <header>
-        <a href="index.html"><img src="/imagens/fc4-ubi-logo-nav.webp" alt=""></a>
+        <a href="index.html"><img src="fc4-ubi-logo-nav.webp" alt=""></a>
 
         <ul>
             <li><a href="historia.html">História</a></li>
@@ -22,15 +23,15 @@
         <h1>Enredo</h1>
 
         <div class="fundobranco">
-            <div class="img" id="imgtitle"><img src="/imagens/overview4.jpg" alt=""></div>
+            <div class="img" id="imgtitle"><img src="overview4.jpg" alt=""></div>
             <p>Em Far Cry 4 o protagonista é Ajay Ghale que regressa a Kyrat (uma nação fictícia fortemente inspirada em locais da região Himalaia do Nepal), uma zona indomável e selvagem no seu pais de origem, para espalhar as cinzas da sua falecida mãe. Uma vez lá, vê-se envolvido numa guerra civil entre os rebeldes (conhecidos como Caminho Dourado) e o regime despótico do auto-intitulado rei, o sádico Pagan Min (Troy Baker). O jogador tem a possibilidade de escolher de que lado quer juntar forças, resultando em diferentes finais.</p>
         </div>
     </main>
     <footer>
         Criado por Mario Aguia:
-        <a href="https://www.instagram.com/mario_aguiar/"Target='_blank'><img src="/imagens/instagram.png" alt=""></a>
-        <a href="https://github.com/MarioAguiar33"target="_blank"><img src="/imagens/github.png" alt=""></a>
+        <a href="https://www.instagram.com/mario_aguiar/"Target='_blank'><img src="instagram.png" alt=""></a>
+        <a href="https://github.com/MarioAguiar33"target="_blank"><img src="github.png" alt=""></a>
     </footer>
-    <script src="/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
