--- a/FarCry4/index.html
+++ b/FarCry4/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Far Cry 4</title>
-    <link rel="shortcut icon" href="/imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="/imagens/fc4-ubi-logo-nav.webp" alt=""></a>
+        <a href="index.html"><img src="fc4-ubi-logo-nav.webp" alt=""></a>
 
         <ul>
             <li><a href="historia.html">História</a></li>
@@ -24,7 +24,7 @@
         <h1>Bem-vindo a Kyrat</h1>
 
         <div class="fundobranco">
-            <div class="img"><img src="/imagens/overview7.webp" alt=""></div>
+            <div class="img"><img src="overview7.webp" alt=""></div>
             <p>Far Cry 4 é um jogo eletrônico de tiro em primeira pessoa jogado em mundo aberto que foi produzido pela Ubisoft Montreal juntamente com a Ubisoft Red Storm, a Ubisoft Toronto, a Ubisoft Shanghai e a Ubisoft Kiev.</p>
             
             <p>É o quarto título principal da série Far Cry e foi publicado pela Ubisoft para Microsoft Windows, PlayStation 3, PlayStation 4, Xbox 360 e Xbox One no dia 18 de novembro de 2014 na América do Norte e no dia 20 de novembro nos territórios EMEA e australianos.</p>
@@ -36,8 +36,8 @@
 
     <footer>
         Criado por Mario Aguia:
-        <a href="https://www.instagram.com/mario_aguiar/"Target='_blank'><img src="/imagens/instagram.png" alt=""></a>
-        <a href="https://github.com/MarioAguiar33"target="_blank"><img src="/imagens/github.png" alt=""></a>
+        <a href="https://www.instagram.com/mario_aguiar/"Target='_blank'><img src="instagram.png" alt=""></a>
+        <a href="https://github.com/MarioAguiar33"target="_blank"><img src="github.png" alt=""></a>
     </footer>
 </body>
 </html>
