--- a/FarCry4/personagens.html
+++ b/FarCry4/personagens.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personagens</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="changecolor('#345289')">
     <header>
-        <a href="index.html"><img src="/imagens/fc4-ubi-logo-nav.webp" alt=""></a>
+        <a href="index.html"><img src="fc4-ubi-logo-nav.webp" alt=""></a>
 
         <ul>
             <li><a href="historia.html">História</a></li>
@@ -21,7 +22,7 @@
     <main>
         <h1>Personagens</h1>
         <div class='fundobranco'>
-            <div class="img"id='imgtitle'><img src="/imagens/overview3.jpg" alt=""></div>
+            <div class="img"id='imgtitle'><img src="overview3.jpg" alt=""></div>
             
             <h3>Ajay Ghale</h3>
             
@@ -79,6 +80,6 @@
         <a href="https://www.instagram.com/mario_aguiar/"Target='_blank'><img src="/imagens/instagram.png" alt=""></a>
         <a href="https://github.com/MarioAguiar33"target="_blank"><img src="/imagens/github.png" alt=""></a>
     </footer>
-    <script src="/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
