--- a/FarCry4/musicas.html
+++ b/FarCry4/musicas.html
@@ -195,7 +195,7 @@
     <footer>
         Criado por Mario Aguia:
         <a href="https://www.instagram.com/mario_aguiar/"Target='_blank'><img src="instagram.png" alt=""></a>
-        <a href="https://github.com/MarioAguiar33"target="_blank"><img src="/imagens/github.png" alt=""></a>
+        <a href="https://github.com/MarioAguiar33"target="_blank"><img src="github.png" alt=""></a>
     </footer>
     <script src="index.js"></script>
 </body>
