--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <img src="dark_mode_black_24dp.svg" alt="">
+        
+        <img src="dark_mode_black_24dp.svg" alt=""onclick='darkMode()'>
 
     </header>
     <main>
