--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -21,9 +21,11 @@
         </div>
 
         <div id="redes">
-            <img src="instagram.png" alt="">
-            <img src="facebook.png" alt="">
-            <img src="github.png" alt="">
+            <a href="https://www.instagram.com/mario_aguiar/"target="_blank"><img src="instagram.png" alt=""></a>
+
+            <a href="https://www.facebook.com/mario.aguiar.737001/"target="_blank"><img src="facebook.png" alt=""></a>
+
+            <a href="https://github.com/MarioAguiar33"target="_blank"><img src="github.png" alt=""></a>
         </div>
 
         <div id="btn">
