continuação do darkmode

--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         
-        <img src="dark_mode_black_24dp.svg" alt=""onclick='darkMode()'>
+        <img id="darkmode" src="dark_mode_black_24dp.svg" alt=""onclick='darkMode()'>
 
     </header>
     <main>
