--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -33,8 +33,8 @@
         </div>
 
         <div id="habilidades">
-            <span>Projects</span>
-            <span>Skills</span>
+            <span id="projects"onclick='exibir(projects)'>Projects</span>
+            <span id="skills"onclick='exibir(skills)'>Skills</span>
 
         </div>
 
