--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -48,20 +48,41 @@
             <div>
                 <h4>Frontend Developer</h4>
                 <h5>HTML</h5>
+                <p>Intermediate</p>
+
                 <h5>CSS</h5>
+                <p>Intermediate</p>
+
                 <h5>JavaScript</h5>
+                <p>Intermediate</p>
+
                 <h5>React</h5>
+                <p>Basic</p>
+
                 <h5>Bootstrap</h5>
+                <p>Basic</p>
+
                 <h5>Git</h5>
+                <p>Basic</p>
+
             </div>
             
             <div>
                 <h4>Backend Developer</h4>
                 <h5>PHP</h5>
+                <p>None</p>
+
                 <h5>MySQL</h5>
+                <p>None</p>
+
                 <h5>Firebase</h5>
+                <p>None</p>
+
                 <h5>Python</h5>
+                <p>None</p>
+
                 <h5>NodeJS</h5>
+                <p>Basic</p>
             </div>
 
         </div>
