--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <footer>
-        <p>Criado por Mario Aguiar</p>
+        <p>Criado por Mario Aguiar   15/12/2021</p>
     </footer>
     <script src="js.js"></script>
     
