--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -39,9 +39,9 @@
         </div>
 
         <div id="projetos">
-            <div><a href="https://marioaguiar33.github.io/html-css-js/calculadora/">calculadora 1.0</a></div>
+            <div id='calc1'><a href="https://marioaguiar33.github.io/html-css-js/calculadora/">calculadora 1.0</a></div>
 
-            <div><a href="https://marioaguiar33.github.io/html-css-js/calculator2.0/">Calculadora 2.0</a></div>
+            <div id="calc2"><a href="https://marioaguiar33.github.io/html-css-js/calculator2.0/">Calculadora 2.0</a></div>
             <div><p>Soon...</p></div>
             <div><p>Soon...</p></div>
         </div>
