update in stylos

--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -49,25 +49,25 @@
             <div>
                 <h4>Frontend Developer</h4>
                 <h5>HTML</h5>
-                <p>Intermediate</p>
+                <p class="intermediate">Intermediate</p>
 
                 <h5>CSS</h5>
-                <p>Intermediate</p>
+                <p class="intermediate">Intermediate</p>
 
                 <h5>JavaScript</h5>
-                <p>Intermediate</p>
+                <p class="intermediate">Intermediate</p>
 
                 <h5>TypeScript</h5>
-                <p>Basic</p>
+                <p class="basic">Basic</p>
 
                 <h5>React</h5>
-                <p>Basic</p>
+                <p class="basic">Basic</p>
 
                 <h5>Bootstrap</h5>
-                <p>Basic</p>
+                <p class="basic">Basic</p>
 
                 <h5>Git</h5>
-                <p>Basic</p>
+                <p class="basic">Basic</p>
 
             </div>
             
@@ -86,7 +86,7 @@
                 <p>None</p>
 
                 <h5>NodeJS</h5>
-                <p>Basic</p>
+                <p class="basic">Basic</p>
             </div>
 
         </div>
