add projeto cordel

--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -39,10 +39,11 @@
         </div>
 
         <div id="projetos">
-            <div id='calc1'><a href="https://marioaguiar33.github.io/html-css-js/calculadora/">calculadora 1.0</a></div>
+            <div id='calc1'><a href="https://marioaguiar33.github.io/html-css-js/calculadora/" target="_blank">calculadora 1.0</a></div>
 
-            <div id="calc2"><a href="https://marioaguiar33.github.io/html-css-js/calculator2.0/">Calculadora 2.0</a></div>
-            <div><p>Soon...</p></div>
+            <div id="calc2"><a href="https://marioaguiar33.github.io/html-css-js/calculator2.0/" target="_blank">Calculadora 2.0</a></div>
+
+            <div id="projetoCordel"><a href="https://marioaguiar33.github.io/html-css-js/projeto-cordel/" target="_blank">Projeto Cordel</a></div>
             <div><p>Soon...</p></div>
         </div>
         <div id='showskills'>
