updates in repository

--- a/FarCry4/musicas.html
+++ b/FarCry4/musicas.html
@@ -7,6 +7,7 @@
     <title>Músicas</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body onload="changecolor('#D49831')">
     <header>
