--- a/FarCry4/historia.html
+++ b/FarCry4/historia.html
@@ -7,6 +7,7 @@
     <title>História</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body onload="changecolor('#FACB0B')">
     <header>
