--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         
-        <img id="darkmode" src="dark_mode_black_24dp.svg" alt=""onclick='darkMode()'>
+        <img id="imgToggleDarkMode" src="dark_mode_black_24dp.svg" alt="">
 
     </header>
     <main>
