--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -46,6 +46,8 @@
 
             <div id="projetoCordel"><a href="https://marioaguiar33.github.io/html-css-js/projeto-cordel/" target="_blank">Projeto Cordel</a></div>
             <div><p>Soon...</p></div>
+            <div><p>Soon...</p></div>
+            <div><p>Soon...</p></div>
         </div>
         <div id='showskills'>
             <div>
