--- a/logins/login01/index.html
+++ b/logins/login01/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <aside>
-        <h1>LOGO</h1>
+        <img src="logo.png" alt="">
     </aside>
     <main>
        
         
         <form action="">
-            <h1>LOGO</h1>
+            <img id='logo'src="logo.png" alt="">
             <h2>Entre ou crie sua conta</h2>
 
             <label for="email">E-mail ou celular</label>
