update img perfil

--- a/myperfil/index.html
+++ b/myperfil/index.html
@@ -16,7 +16,7 @@
     </header>
     <div class="container">
         <main>
-            <div id="foto"><img src="a.webp" alt=""></div>
+            <div id="foto"><img src="logoB.png" alt=""></div>
             <div id="names">
                 <h2>Mario Aguiar</h2>
                 <span>Web developer</span>
