updates in componets

--- a/meusetup/index.html
+++ b/meusetup/index.html
@@ -14,32 +14,61 @@
     <main>
         <h2>Placa Mãe</h2>
             <h3>Asus Prime A320M-K/BR</h3>
-            <div><img src="imagens/placamae.jpg" alt=""></div>
+            <div><img src="imagens/placamae.jpg" alt="placamae"></div>
+
         <h2>Processador</h2>
             <h3>AMD Ryzen 5 2400G</h3>
-            <div><img src="imagens/processador.jpg" alt=""></div>
+            <div><img src="imagens/processador.jpg" alt="processador"></div>
+
         <h2>Fonte de Alimentação</h2>
             <h3>Gamemax 500W 80 Plus Bronze - GMX GM500</h3>
-            <div><img src="imagens/fonte.jpg" alt=""></div>
+            <div><img src="imagens/fonte.jpg" alt="fonte"></div>
+
         <h2>Memória Ram</h2>
-            <h3>Kingston Fury Beast</h3>
-            <div><img src="imagens/ram.jpg" alt=""></div>
-            <h3>Crucial Ballistix </h3>
-            <div><img src="imagens/ram2.jpg" alt=""></div>
+            <h3>Kingston Fury Beast (8gb)</h3>
+            <div><img src="imagens/ram.jpg" alt="Memória"></div>
+            <h3>Crucial Ballistix (8gb) </h3>
+            <div><img src="imagens/ram2.jpg" alt="Memória"></div>
+
         <h2>Gabinete</h2>
             <h3>K-mex Gamer Black Hawk</h3>
-            <div><img src="imagens/gabinete.jpg" alt=""></div>
-        
+            <div><img src="imagens/gabinete.jpg" alt="gabinete"></div>
+                    
         <h2>Fans</h2>
             <h3>Kit Cooler FAN Rise Mode Tornado</h3>
-            <div><img src="imagens/fan.jpg" alt=""></div>
+            <div><img src="imagens/fan.jpg" alt="Fans"></div>
+
         <h2>Mouse</h2>
             <h3>Redragon Cobra</h3>
-            <div><img src="imagens/mouse.jpg" alt=""></div>
+            <div><img src="imagens/mouse.jpg" alt="mouse"></div>
+
         <h2>Teclado</h2>
             <h3>Teclado Mecânico Gamer Redragon Kala</h3>
-            <div><img src="imagens/teclado.jpg" alt=""></div>
+            <div><img src="imagens/teclado.jpg" alt="teclado"></div>
 
+        <h4>Atualização 10/08/2022</h4>
+
+        <h2>Monitor</h2>
+        <h3>Monitor Gamer Samsung Odyssey G3</h3>
+        <div><img src="imagens/monitor.jpg" alt="monitor"></div>
+
+        <h2>Placa de Video</h2>
+        <h3>Placa de Vídeo MSI NVIDIA GeForce GTX 1050 Ti 4GT OC</h3>
+        <div><img src="imagens/placa-de-video.jpg" alt="placa-de-video"></div>
+
+        <h4>Futuros Upgrates</h4>
+
+        <h2>Placa Mãe</h2>
+        <h3>Placa Mãe Asus TUF GAMING B550M-PLUS</h3>
+        <div><img src="imagens/placa-mae-b550.jpg" alt="placa-mae-b550"></div>
+
+        <h2>Processador</h2>
+        <h3>Processador AMD Ryzen 5 5600X</h3>
+        <div><img src="imagens/ryzen-5-5600x.jpg" alt="processador"></div>
+
+        <h2>Cooler</h2>
+        <h3>Aircooler Redragon Thor, Iluminação Rainbow</h3>
+        <div><img src="imagens/aircooler-redragon-thor.jpg" alt="cooler"></div>
     </main>
     <footer>
         <small>Mario Aguiar</small>
