add placa de video

--- a/meusetup/index.html
+++ b/meusetup/index.html
@@ -20,6 +20,10 @@
         <h3>Processador AMD Ryzen 5 5600X</h3>
         <div><img src="imagens/ryzen-5-5600x.jpg" alt="processador"></div>
 
+        <h2>Placa de Video</h2>
+        <h3>Placa de Vídeo MSI GeForce RTX 3060 Ventus 2X 12G OC, 12GB GDDR6, 15 Gbps, Ray Tracing</h3>
+        <div><img src="imagens/placa-de-video-msi-geforce-rtx-3060.jpg"></div>
+
         <h2>Cooler</h2>
         <h3>Aircooler Redragon Thor, Iluminação Rainbow</h3>
         <div><img src="imagens/aircooler-redragon-thor.jpg" alt="cooler"></div>
@@ -55,9 +59,7 @@
         <h3>Monitor Gamer Samsung Odyssey G3</h3>
         <div><img src="imagens/monitor.jpg" alt="monitor"></div>
 
-        <h2>Placa de Video</h2>
-        <h3>Placa de Vídeo MSI NVIDIA GeForce GTX 1050 Ti 4GT OC</h3>
-        <div><img src="imagens/placa-de-video.jpg" alt="placa-de-video"></div>
+        
 
     </main>
     <footer>
